lets see if SSI works in a php app..

--- a/home.html
+++ b/home.html
@@ -8,46 +8,8 @@
 	<link rel="stylesheet" type="text/css" href="css/indexstyle.css" />
 </head>
 <body>
-<header> 
-	<div id="logo"> <span>Margaret E. Dorsey</span></div>
-	<a id="japanese" href="japanese/index.html" lang="ja" hreflang="ja">日本語 </a>
-	
-	<nav> 
-		<!-- main navigation (always visible) -->
-		<ul>
-			<li><a href="#graphic" id="current"> Front Page </a></li>
-			<li>
-				<a href="math/index.html">Mathematics</a>
-				<!-- sub navigation for math (invisible until hover)-->
-				<ul class="dropdown">
-					<li><a href="math/education.html"> Education </a> </li>
-					<li><a href="math/research.html"> Research </a> </li>
-				</ul>
-			</li>
-			<li>
-				<a href="computing/index.html">Computing </a>
-				<!-- sub navigation for computing (invisible until hover) -->
-				<ul class="dropdown">
-					<li><a href="computing/education.html"> Education </a> </li>
-					<li><a href="computing/completedprojects.html"> Completed Projects </a> </li>
-					<li><a href="computing/currentprojects.html"> Current Projects </a> </li>
-				</ul>
-			</li>
-			<li>
-				<a href="gamedesign/index.html">Game Design</a>
-					<!-- sub navigation for game design (invisible until hover) -->
-					<ul class="dropdown">
-						<li><a href="gamedesign/design.html"> Design</a> </li>
-						<li><a href="gamedesign/artworkandassets.html"> Artwork and Assets </a> </li>
-						<li><a href="gamedesign/games.html"> Games </a> </li>
-					</ul>
-			</li>
-			<li><a href="blog/index.html">Blog</a></li>
-			<li><a href="contact.html"> Contact </a> </li>
-			<li><a href="Resume.pdf">Resume</a></li>
-		</ul>		
-	</nav>
-</header>
+
+<!--#include virtual="include/header.html" -->
 
 <div id="graphic">
 	<img src="media/index/indexgraphic.svg" alt="vector graphic for decoration" />
