looks like ssi doesnt work, switching to php

--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<!--#include virtual="include/header.html" -->
+<?php include 'include/header.html'; ?>
 
 <div id="graphic">
 	<img src="media/index/indexgraphic.svg" alt="vector graphic for decoration" />
@@ -25,6 +25,8 @@ and get to know me.
 
 <a href="notes.html"> Link to the notes page </a>
 </main>
+<?php include 'include/footer.html'; ?>
+
 </body>
 </html>
 
