--- a/computing/education.html
+++ b/computing/education.html
@@ -9,46 +9,8 @@
 	
 </head>
 <body>
-<header> 
-	<div id="logo"> <span>Margaret E. Dorsey</span></div>
-	<a id="japanese" href="../japanese/index.html" lang="ja" hreflang="ja">日本語 </a>
-	
-	<nav> 
-		<!-- main navigation (always visible) -->
-		<ul>
-			<li><a href="../index.html" > Front Page </a></li>
-			<li>
-				<a href="../math/index.html">Mathematics</a>
-				<!-- sub navigation for math (invisible until hover)-->
-				<ul class="dropdown">
-					<li><a href="../math/education.html"> Education </a> </li>
-					<li><a href="../math/research.html"> Research </a> </li>
-				</ul>
-			</li>
-			<li>
-				<a href="../computing/index.html" id="current">Computing </a>
-				<!-- sub navigation for computing (invisible until hover) -->
-				<ul class="dropdown">
-					<li><a href="#"> Education </a> </li>
-					<li><a href="completedprojects.html"> Completed Projects </a> </li>
-					<li><a href="currentprojects.html"> Current Projects </a> </li>
-				</ul>
-			</li>
-			<li>
-				<a href="../gamedesign/index.html">Game Design</a>
-					<!-- sub navigation for game design (invisible until hover) -->
-					<ul class="dropdown">
-						<li><a href="../gamedesign/design.html"> Design</a> </li>
-						<li><a href="../gamedesign/artworkandassets.html"> Artwork and Assets </a> </li>
-						<li><a href="../gamedesign/games.html"> Games </a> </li>
-					</ul>
-			</li>
-			<li><a href="../blog/index.html" >Blog</a></li>
-			<li><a href="../contact.html" > Contact </a> </li>
-			<li><a href="../Resume.pdf">Resume</a></li>
-		</ul>		
-	</nav>
-</header>
+
+<?php include 'include/header.html'; ?>
 
 <article id="main"> <!-- for the entire body of content -->
  <h1 id="computingtitle"> Education </h1>
@@ -117,6 +79,6 @@
 			</ul>
 	</section>
 </article>
-
+<?php include 'include/footer.html'; ?>
 </body>
 </html>
