fixing broken paths, missed some pages last time, oops

--- a/computing/education.html
+++ b/computing/education.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<?php include 'include/header.html'; ?>
+<?php include '/include/header.html'; ?>
 
 <article id="main"> <!-- for the entire body of content -->
  <h1 id="computingtitle"> Education </h1>
@@ -79,6 +79,6 @@
 			</ul>
 	</section>
 </article>
-<?php include 'include/footer.html'; ?>
+<?php include '/include/footer.html'; ?>
 </body>
 </html>
