I am the definition of incompetence

--- a/computing/currentprojects.html
+++ b/computing/currentprojects.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<?php include '/include/header.html'; ?>
+<?php include '../include/header.html'; ?>
 
 <article>
 <h1 id="computingtitle"> Current Projects </h1>
@@ -21,6 +21,6 @@
 	<a href="https://github.com/Abhalphiest/engine" class="github">Project Repository on GitHub</a>
 </section>
 </article>
-<?php include '/include/footer.html'; ?>
+<?php include '../include/footer.html'; ?>
 </body>
 </html>
