--- a/computing/index.html
+++ b/computing/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<?php include '/include/header.html'; ?>
+<?php include '../include/header.html'; ?>
 
 <article id="subindex">
 
@@ -21,7 +21,7 @@
 <a href="completedprojects.html"> Completed Projects </a>
 
 </article>
-<?php include '/include/footer.html'; ?>
+<?php include '../include/footer.html'; ?>
 </body>
 
 </html>
