--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 <body>
-<?php include '/include/header.html'; ?>
+<?php include '../include/header.html'; ?>
 
 
 <article id="contact">
@@ -28,7 +28,7 @@
 	<a href="https://www.linkedin.com/in/margaretdorsey"> <img src="media/index/linkedin.png" alt="linkedin" title="My LinkedIn Profile" width="50" height="50"/> </a>
 	
 </article>
-<?php include '/include/footer.html'; ?>
+<?php include '../include/footer.html'; ?>
 </body>
 </html>
 
