--- a/gamedesign/artworkandassets.html
+++ b/gamedesign/artworkandassets.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<?php include '/include/header.html'; ?>
+<?php include '../include/header.html'; ?>
 
 
 
@@ -62,6 +62,6 @@
 </section>
 
 </article>
-<?php include '/include/footer.html'; ?>
+<?php include '../include/footer.html'; ?>
 </body>
 </html>
