--- a/gamedesign/games.html
+++ b/gamedesign/games.html
@@ -10,7 +10,7 @@
 	
 </head>
 <body>
-<?php include '/include/header.html'; ?>
+<?php include '../include/header.html'; ?>
 <article id="gallery">
 
 <h1 id="gametitle"> Games </h1>
@@ -44,6 +44,6 @@
 	
 </section>
 </article>
-<?php include '/include/footer.html'; ?>
+<?php include '../include/footer.html'; ?>
 </body>
 </html>
