--- a/home.html
+++ b/home.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<?php include '/include/header.html'; ?>
+<?php include 'include/header.html'; ?>
 
 <div id="graphic">
 	<img src="media/index/indexgraphic.svg" alt="vector graphic for decoration" />
@@ -25,7 +25,7 @@ and get to know me.
 
 <a href="notes.html"> Link to the notes page </a>
 </main>
-<?php include '/include/footer.html'; ?>
+<?php include 'include/footer.html'; ?>
 
 </body>
 </html>
