--- a/math/education.html
+++ b/math/education.html
@@ -9,7 +9,7 @@
 	
 </head>
 <body>
-<?php include '/include/header.html'; ?>
+<?php include '../include/header.html'; ?>
 <article id="main"> <!-- for the entire body of content -->
 <h1 id="mathtitle"> Education </h1>
 	<section>
@@ -88,6 +88,6 @@
 	</section>
 </article>
 
-<?php include '/include/footer.html'; ?>
+<?php include '../include/footer.html'; ?>
 </body>
 </html>
