--- a/math/index.html
+++ b/math/index.html
@@ -9,7 +9,7 @@
 	
 </head>
 <body>
-<?php include '/include/header.html'; ?>
+<?php include '../include/header.html'; ?>
 
 <article id="subindex">
 
@@ -19,6 +19,6 @@
 <a href="research.html"> Research </a>
 
 </article>
-<?php include '/include/footer.html'; ?>
+<?php include '../include/footer.html'; ?>
 </body>
 </html>
