--- a/math/research.html
+++ b/math/research.html
@@ -9,7 +9,7 @@
 	
 </head>
 <body>
-<?php include '/include/header.html'; ?>
+<?php include '../include/header.html'; ?>
 <article>
 <h1 id="mathtitle"> Research </h1>
 <section class="project">
@@ -20,6 +20,6 @@ arising from the physical sciences.</p>
 <p> Research Mentor: Dr. Tamas Wiandt </p>
 </section>
 </article>
-<?php include '/include/footer.html'; ?>
+<?php include '../include/footer.html'; ?>
 </body>
 </html>
