--- a/notes.html
+++ b/notes.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 </head>
 <body>
-<?php include '/include/header.html'; ?>
+<?php include '../include/header.html'; ?>
 
 <article>
 <h1> Notes</h1>
@@ -28,7 +28,7 @@ point of the project, but it would be a better portfolio site if it included mor
 <p> Also, I would have liked to spend more time tweaking some of the vector graphics, they aren't all quite perfect and they could be more cohesive. Some of my
 CSS is really unclean, and I plan to spend some time consolidating and tidying it up when I get the chance. It just is unlikely to happen before the end of this project. </p>
 </article>
-<?php include '/include/footer.html'; ?>
+<?php include '../include/footer.html'; ?>
 
 </body>
 </html>
