--- a/gamedesign/design.html
+++ b/gamedesign/design.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<?php include '/include/header.html'; ?>
+<?php include '../include/header.html'; ?>
 
 <article id="gallery">
 <section id="introduction">
@@ -46,6 +46,6 @@
 </section>
 
 </article>
-<?php include '/include/footer.html'; ?>
+<?php include '../include/footer.html'; ?>
 </body>
 </html>
