--- a/gamedesign/index.html
+++ b/gamedesign/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<?php include '/include/header.html'; ?>
+<?php include '../include/header.html'; ?>
 
 <article id="subindex">
 
@@ -22,6 +22,6 @@
 
 </article>
 
-<?php include '/include/footer.html'; ?>
+<?php include '../include/footer.html'; ?>
 </body>
 </html>
