--- a/home.html
+++ b/home.html
@@ -6,6 +6,7 @@
 	<title> The Portfolio of Margaret Dorsey </title>
 	<link rel="stylesheet" type="text/css" href="css/styles.css" />
 	<link rel="stylesheet" type="text/css" href="css/indexstyle.css" />
+	<script> window.onload = function(){document.getElementsByName("indexnav")[0].setAttribute("id","current")}  </script>
 </head>
 <body>
 
@@ -25,7 +26,7 @@ and get to know me.
 
 <a href="notes.html"> Link to the notes page </a>
 </main>
-<?php include 'include/footer.html'; ?>
+<?php include 'include/footer.php'; ?>
 
 </body>
 </html>
