--- a/education/computingeducation.html
+++ b/education/computingeducation.html
@@ -1,19 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
-	<title> The Portfolio of Margaret Dorsey - Computing Education</title>
-	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
-	<link rel="stylesheet" type="text/css" href="../css/education.css" />
-	<script> window.onload = function(){document.getElementsByName("computingnav")[0].setAttribute("id","current")}  </script>
-</head>
-<body>
-
-<?php include '../include/header.html'; ?>
-
-<article id="main"> <!-- for the entire body of content -->
- <h1 id="computingtitle"> Education </h1>
+<div id="compedu">
+ <h1 id="computingtitle"> Computing </h1>
 	<section>
 		<h2>Basic Data Structures and Algorithms</h2>
 		<h4>Courses Taken </h4>
@@ -56,10 +42,13 @@
 		<h4> Knowledge </h4>
 			<ul>
 				<li> OpenGL and C++ </li>
-				<li> Transformation Matrices </li>
-				<li> Cameras, Orthogonal and Perspective </li>
-				<li> Mesh Construction </li>
-				<li> Shaders </li>
+				<li> Transformations </li>
+				<li> Cameras, Orthographic and Perspective Transformations</li>
+				<li> Mesh Construction and Rendering </li>
+				<li> Fragment and Vertex Shaders </li>
+				<li> The Rendering Pipeline </li>
+				<li> .obj loading </li>
+				<li> Texturing and UV Coordinates </li>
 			</ul>
 	</section>
 	
@@ -78,7 +67,20 @@
 				<li> Spatial Partitioning </li>
 			</ul>
 	</section>
-</article>
-<?php include '../include/footer.php'; ?>
-</body>
-</html>
+	<section>
+		<h2>Web Development</h2>
+		<h4>Courses Taken</h4>
+			<ul>
+				<li>Web Design and Implementation </li>
+			</ul>
+		<h4> Knowledge </h4>
+		<ul>
+			<li>HTML5</li>
+			<li>CSS3</li>
+			<li>Javascript/JQuery</li>
+			<li>Server Side includes and some PHP</li>
+			<li>.htaccess</li>
+			<li>FTP/SFTP</li>
+			<li>Design principles and the web development cycle </li>
+		</ul>
+</div>
