--- a/education/matheducation.html
+++ b/education/matheducation.html
@@ -1,20 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="utf-8"/>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />  <!-- for responsive design on devices that try to autoscale -->
-	<title> The Portfolio of Margaret Dorsey - Math Education</title>
-	<link rel="stylesheet" type="text/css" href="../css/styles.css" />
-	<link rel="stylesheet" type="text/css" href="../css/education.css" />
-	
-	
-	<script> window.onload = function(){document.getElementsByName("mathnav")[0].setAttribute("id","current")}  </script>
-	
-</head>
-<body>
-<?php include '../include/header.html'; ?>
-<article id="main"> <!-- for the entire body of content -->
-<h1 id="mathtitle"> Education </h1>
+<div id="mathedu">
+<h1 id="mathtitle"> Mathematics </h1>
 	<section>
 		<h2>Linear Algebra</h2>
 		<h4>Courses Taken </h4>
@@ -56,7 +41,7 @@
 		<h4>Courses Taken </h4>
 			<ul>
 				<li>Discrete Math and Introduction to Proofs</li>
-				<li>Real Analysis</li>
+				<li>Real Variables</li>
 			</ul>
 		<h4> Knowledge </h4>
 			<ul>
@@ -64,7 +49,8 @@
 				<li> Modular Arithmetic, Equivalence Relations, Equivalence Classes</li>
 				<li> Countability </li>
 				<li> Sequences, Series </li>
-				<li> Elementary Topology </li>
+				<li> Topology on the Real Number Line</li>
+				<li> Limits and Continuity </li>
 				<li> Proof Writing </li>
 				<li> Elementary Group Theory </li>
 			</ul>
@@ -89,8 +75,5 @@
 				<li> Some (very shallow) understanding of Calculus of Variations</li>
 			</ul>
 	</section>
-</article>
+</div>
 
-<?php include '../include/footer.php'; ?>
-</body>
-</html>
