--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <link rel="stylesheet" type="text/css" href="resume.css">
+<link rel="stylesheet" type="text/css" media="print" href="resumePrint.css">
 </head>
 <body>
 
