started debugging the css for projects page

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -93,8 +93,7 @@ console.log($("#"+section).attr("class"));
 
 
 <article id="main"> <!-- for the entire body of content -->
-<nav id="projectSubnav">
-<ul>
+<ul id="projectSubnav">
 <li onclick="sectionSwitch('#wyvern')"> Wyvern Engine</li>
 <li onclick="sectionSwitch('#research')"> Math Undergraduate Research </li>
 <li onclick="sectionSwitch('#apotheoun')"> Apotheoun </li>
@@ -105,7 +104,6 @@ console.log($("#"+section).attr("class"));
 <li onclick="sectionSwitch('#primality')"> Primality Testing </li>
 <li onclick="sectionSwitch('#geomAlg')"> Geometric Algebra </a> </li>
 </ul>
-</nav>
 
 <div id="wyvern" class="project">
 	<h1> Wyvern Engine </h1>
