fixed jquery problems and some of the css problems. subnav still changes with change of project

--- a/projects/projects.html
+++ b/projects/projects.html
@@ -52,8 +52,6 @@ console.log($("#"+section).attr("class"));
 					<li class="topnav"><a href="projects.html"
 						onclick="setGlobal('project', 'research')"> Math Undergraduate Research</a> </li>
 					<li class="topnav"><a href="projects.html"
-						onclick="setGlobal('project', 'apotheoun')"> Apotheoun </a> </li>
-					<li class="topnav"><a href="projects.html"
 						onclick="setGlobal('project', 'ui')"> Application Design </a> </li>
 					<li class="topnav"><a href="projects.html"
 						onclick="setGlobal('project', 'model')"> 3D Modelling </a> </li>
@@ -96,13 +94,12 @@ console.log($("#"+section).attr("class"));
 <ul id="projectSubnav">
 <li onclick="sectionSwitch('#wyvern')"> Wyvern Engine</li>
 <li onclick="sectionSwitch('#research')"> Math Undergraduate Research </li>
-<li onclick="sectionSwitch('#apotheoun')"> Apotheoun </li>
 <li onclick="sectionSwitch('#ui')"> Application Design </li>
 <li onclick="sectionSwitch('#model')"> 3D Modelling </li>
 <li onclick="sectionSwitch('#ggj')"> Global Game Jam 2016 </li>
 <li onclick="sectionSwitch('#androids')"> Androids, Assemble!</li>
 <li onclick="sectionSwitch('#primality')"> Primality Testing </li>
-<li onclick="sectionSwitch('#geomAlg')"> Geometric Algebra </a> </li>
+<li onclick="sectionSwitch('#geomAlg')"> Geometric Algebra </li>
 </ul>
 
 <div id="wyvern" class="project">
@@ -124,17 +121,6 @@ arising from the physical sciences.</p>
 </div>
 
 
-<div id="apotheoun" class="project">
-	<h1> Apotheoun </h1>
-	<p class="description"> A 2D top-down space-themed shooter, implemented in Unity 2d. 
-	<a class="gallerylink" href="https://github.com/Abhalphiest/apotheoun">Project on Github</a></p>
-	<div class="imgbox">
-		<img src="../media/projects/apotheoun/playerconcept.jpg" alt="player concept sketch" title="Player" />
-		<img src="../media/projects/apotheoun/enemyconcept.jpg" alt="enemy concept sketch" title="Enemy" />
-		<img src="../media/projects/apotheoun/background1.png" alt="game environment 1" title="Background" />
-		<p class="notes"> Concept sketches of player ship, enemy ship, and background environment. </p>
-	</div>
-</div>
 
 <div id="ui" class="project">
 	<h1 onclick="sectionSwitch('#ui')"> Application Design </h1>
