--- a/education/education.html
+++ b/education/education.html
@@ -22,38 +22,91 @@
 	</script>
 </head>
 <body>
-<?php include '../include/header.html'; ?>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script> <!-- include jQuery -->
+<script src="../javascript/globals.js"></script>
+<script src="../javascript/section.js"></script>
+<script>
+$(document).ready(function(){
+
+$(".topnav").hover(function(e){
+    $(this).children('.dropdown').slideDown(200);
+},function(e){$(this).children('.dropdown').slideUp(200);});
+
+var section = getGlobal("education");
+console.log(section);
+if(section != null)
+{
+console.log("#"+section);
+sectionSwitch("#"+section);
+console.log($("#"+section).attr("class"));
+}
+});
+</script>
+
+
+<header> 
+	<div id="logo"> <a href="../index.html">Margaret Dorsey</a></div>
+	<nav> 
+		<!-- main navigation (always visible) -->
+		<ul id="mainnav">
+			<li class="topnav" id="2" name="projectnav">
+				<a href="../projects/projects.html"  >Projects </a>
+				<!-- sub navigation for computing (invisible until hover) -->
+				<ul class="dropdown">
+					<li class="topnav"><a href="../projects/projects.html" 
+						onclick="setGlobal('project', 'wyvern')"> Wyvern Engine </a> </li>
+					<li class="topnav"><a href="../projects/projects.html"
+						onclick="setGlobal('project', 'research')"> Math Undergraduate Research</a> </li>
+					<li class="topnav"><a href="../projects/projects.html"
+						onclick="setGlobal('project', 'ui')"> Application Design </a> </li>
+					<li class="topnav"><a href="../projects/projects.html"
+						onclick="setGlobal('project', 'model')"> 3D Modelling </a> </li>
+					<li class="topnav"><a href="../projects/projects.html"
+						onclick="setGlobal('project', 'ggj')"> Global Game Jam 2016 </a> </li>
+					<li class="topnav"><a href="../projects/projects.html"
+						onclick="setGlobal('project', 'androids')"> Androids, Assemble! </a> </li>
+					<li class="topnav"><a href="../projects/projects.html"
+						onclick="setGlobal('project', 'primality')"> Primality Testing </a> </li>
+					<li class="topnav"><a href="../projects/projects.html"
+						onclick="setGlobal('project', 'geomAlg')"> Geometric Algebra </a> </li>
+				</ul>
+			</li >
+			<li class ="topnav" id="1" name="edunav" >
+				<a href="education.html" >Education</a>
+				<!-- sub navigation for math (invisible until hover)-->
+				<ul class="dropdown">
+					<li class="topnav"><a href="education.html"
+						onclick="setGlobal('education', 'compedu')"> Computing </a> </li>
+					<li class="topnav"><a href="education.html"
+						onclick="setGlobal('education', 'mathedu')"> Mathematics </a> </li>
+					<li class="topnav"><a href="education.html"
+						onclick="setGlobal('education', 'gameedu')"> Game Design </a> </li>
+					<li class="topnav"><a href="education.html"
+						onclick="setGlobal('education', 'coursework')"> Coursework </a> </li>
+				</ul>
+			</li>
+			
+			<li name="aboutnav">
+				<a href="../aboutme.html" >About Me</a>
+			</li>
+			<li><a href="../resume.html">Resume</a></li>
+		</ul>		
+	</nav>
+</header>
+
+	
+<ul id="educationSubnav">
+<li onclick="sectionSwitch('#compedu')"> Computing</li>
+<li onclick="sectionSwitch('#mathedu')"> Mathematics </li>
+<li onclick="sectionSwitch('#gameedu')"> Game Design and Development </li>
+<li onclick="sectionSwitch('#coursework')"> Coursework </li>
+</ul>
 <article id="main"> <!-- for the entire body of content -->
 <script src="../javascript/section.js"></script>
-<?php
-ini_set('display_errors',1);
-if(isset($_GET['action'])) //special link
-{
-	if($_GET['action'] == 'computing')
-	{
-		echo "<script>$(document).ready(function()
-					{sectionSwitch('#compedu','#computingtitle');});</script>";
-	}
-	if($_GET['action'] == 'mathedu')
-	{
-		echo "<script>$(document).ready(function()
-					{sectionSwitch('#mathedu','#mathtitle');});</script>";
-	}
-	if($_GET['action'] == 'gamedesign')
-	{
-		echo "<script>$(document).ready(function()
-					{sectionSwitch('#gameedu','#gametitle');});</script>";
-	}
-	if($_GET['action'] == 'coursework')
-	{
-		echo "<script>$(document).ready(function()
-					{sectionSwitch('#coursework','#coursetitle');});</script>";
-	}
-}
-?>
 
-<h1 id="mathtitle" onclick="sectionSwitch('#mathedu','#mathtitle')"> Mathematics </h1>
-<div id="mathedu">
+<div id="mathedu">	
+<h1> Mathematics </h1>
 	<section>
 		<h2>Linear Algebra</h2>
 		<h4>Courses Taken </h4>
@@ -131,8 +184,8 @@ if(isset($_GET['action'])) //special link
 	</section>
 </div>
 
- <h1 id="computingtitle" onclick="sectionSwitch('#compedu','#computingtitle')"> Computing </h1>
- <div id="compedu">
+<div id="compedu">
+	 <h1> Computing </h1>
 	<section>
 		<h2>Basic Data Structures and Algorithms</h2>
 		<h4>Courses Taken </h4>
@@ -219,8 +272,8 @@ if(isset($_GET['action'])) //special link
 	</section>
 </div>
 
-<h1 id="gametitle" onclick="sectionSwitch('#gameedu','#gametitle')"> Game Design </h1>
 <div id="gameedu">
+	<h1> Game Design </h1>
 	<section>
 		<h2>User Interface Design</h2>
 		<h4>Courses Taken </h4>
@@ -256,8 +309,8 @@ if(isset($_GET['action'])) //special link
 			</ul>
 	</section>
 </div>
-<h1 id="coursetitle" onclick="sectionSwitch('#coursework','#coursetitle')"> Coursework </h1>
 <div id="coursework">
+	<h1>Coursework</h1>
 	<section>
 		<h2>Spring 2016</h2>
 		<h4>Courses</h4>
